--- a/index.html
+++ b/index.html
@@ -2,50 +2,72 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>I Wanna Be Yours — fragmento (autoplay + desmute seguro)</title>
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>I Wanna Be Yours — fragmento</title>
 <style>
   html, body { height: 100%; }
   body{
     margin:0;
     background: radial-gradient(1200px 800px at 50% 30%, #3c2348 0%, #2a1833 50%, #1b1024 100%);
-    overflow:hidden; font-family: ui-serif, Georgia, "Times New Roman", serif; color:#fff;
+    overflow:hidden;
+    font-family: ui-serif, Georgia, "Times New Roman", serif;
+    color:#fff;
   }
-  .particle{ position:absolute; top:-5vh; border-radius:50%; background:#e14;
-    box-shadow:0 0 10px rgba(255,70,90,.65); opacity:.85;
-    animation: fall linear infinite, drift ease-in-out infinite; }
+
+  /* Partículas */
+  .particle{
+    position:absolute; top:-5vh; border-radius:50%;
+    background:#e14; box-shadow:0 0 10px rgba(255,70,90,.65);
+    opacity:.85; animation:fall linear infinite, drift ease-in-out infinite;
+  }
   @keyframes fall{ to{ transform: translateY(110vh); } }
   @keyframes drift{ 0%{margin-left:-6px} 50%{margin-left:6px} 100%{margin-left:-6px} }
 
-  .ui{ position:fixed; inset:0 0 auto 0; display:flex; gap:.75rem; align-items:center;
-    padding:.75rem .9rem; background:linear-gradient(180deg, rgba(0,0,0,.45), rgba(0,0,0,0)); z-index:20; }
-
-  .lyrics-wrap{ position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); z-index:15; max-width:min(800px, 88vw) }
-  .lyrics-box{
-    padding:22px 28px; background: rgba(255,255,255,.92); color:#7a1d1d; border-radius:24px;
-    box-shadow:0 10px 30px rgba(0,0,0,.35), 0 0 0 1px rgba(255,255,255,.25) inset;
-    font-size:clamp(18px,3.5vw,28px); line-height:1.35; text-align:center; white-space:pre-line; backdrop-filter: blur(2px);
-    min-width:280px;
+  /* Cabecera */
+  .ui{
+    position:fixed; inset:0 0 auto 0; display:flex; gap:.75rem; align-items:center;
+    padding:.75rem .9rem; background:linear-gradient(180deg, rgba(0,0,0,.45), rgba(0,0,0,0)); z-index:20;
   }
-  .caret::after{ content:""; display:inline-block; width:1ch; height:1em; vertical-align:-0.2em;
-    border-left:2px solid #7a1d1d; margin-left:2px; animation: blink 1s steps(1) infinite; }
+
+  /* Caja de letras centrada */
+  .lyrics-wrap{
+    position:fixed; top:50%; left:50%; transform:translate(-50%,-50%);
+    z-index:15; max-width:min(800px, 88vw);
+  }
+  .lyrics-box{
+    padding:22px 28px;
+    background: rgba(255,255,255,.92);
+    color:#7a1d1d;
+    border-radius:24px;
+    box-shadow:0 10px 30px rgba(0,0,0,.35), 0 0 0 1px rgba(255,255,255,.25) inset;
+    font-size: clamp(18px, 3.5vw, 28px);
+    line-height: 1.35;
+    text-align:center;
+    white-space: pre-line;
+    backdrop-filter: blur(2px);
+    min-width: 280px;
+  }
+  .caret::after{
+    content:"";
+    display:inline-block; width:1ch; height:1em; vertical-align:-0.2em;
+    border-left:2px solid #7a1d1d; margin-left:2px; animation: blink 1s steps(1) infinite;
+  }
   @keyframes blink{ 50%{opacity:0} }
 
-  /* Aviso muy discreto para activar sonido */
-  .toast{
-    position:fixed; top:10px; left:50%; transform:translateX(-50%);
-    background:rgba(255,255,255,.95); color:#4a164a; font-weight:700;
-    padding:.5rem .9rem; border-radius:12px; box-shadow:0 8px 24px rgba(0,0,0,.25);
-    z-index:40;
+  /* Overlay de inicio (necesario para móvil/WhatsApp) */
+  .overlay{
+    position:fixed; inset:0; display:flex; align-items:center; justify-content:center; z-index:40;
+    background:linear-gradient(180deg,rgba(0,0,0,.55),rgba(0,0,0,.35));
+    user-select:none; -webkit-user-select:none;
+  }
+  .card{
+    background:rgba(255,255,255,.95); color:#4a164a; border-radius:16px; padding:16px 18px; text-align:center;
+    box-shadow:0 12px 30px rgba(0,0,0,.35);
+  }
+  .btn{
+    margin-top:10px; border:0; border-radius:12px; padding:.7rem 1.1rem; background:#ff2d55; color:#fff; font-weight:800; cursor:pointer;
   }
   .hidden{ display:none; }
-
-  /* Controles nativos del audio visibles y pequeños */
-  .player{
-    position:fixed; right:10px; bottom:10px; z-index:50;
-    background:rgba(0,0,0,.35); padding:.35rem .5rem; border-radius:10px;
-  }
-  .player audio{ width:220px; height:28px }
 </style>
 </head>
 <body>
@@ -54,32 +76,36 @@
 
 <div class="lyrics-wrap"><div id="lyricsBox" class="lyrics-box caret"></div></div>
 
-<!-- Audio: autoplay muted (permitido), con controles nativos visibles -->
-<div class="player">
-  <audio id="bgm" src="arctic.mp3" preload="auto" playsinline controls muted></audio>
-</div>
+<!-- Tu audio recortado -->
+<audio id="bgm" src="arctic.mp3" preload="auto" playsinline></audio>
 
-<!-- Aviso si hay que tocar para activar sonido -->
-<div id="toast" class="toast hidden">Toca/clic/tecla para activar el sonido</div>
+<!-- Overlay para iniciar (tap/click requerido) -->
+<div id="gate" class="overlay">
+  <div class="card">
+    <div>Toque para escuchar el fragmento</div>
+    <button id="playBtn" class="btn">▶ Reproducir</button>
+  </div>
+</div>
 
 <script>
 /* ===== Partículas ===== */
-const PARTICLES=24;
-for(let i=0;i<PARTICLES;i++){
-  const p=document.createElement('div'); p.className='particle';
-  p.style.left=`${Math.random()*100}vw`;
-  const s=6+Math.random()*6; p.style.width=`${s}px`; p.style.height=`${s}px`;
-  p.style.animationDuration=`${6+Math.random()*6}s, ${2+Math.random()*3}s`;
-  p.style.animationDelay=`${Math.random()*6}s, ${Math.random()*2}s`;
+const PARTICLES = 24;
+for (let i = 0; i < PARTICLES; i++) {
+  const p = document.createElement('div');
+  p.className = 'particle';
+  p.style.left = `${Math.random()*100}vw`;
+  const s = 6 + Math.random()*6;
+  p.style.width = `${s}px`; p.style.height = `${s}px`;
+  p.style.animationDuration = `${6 + Math.random()*6}s, ${2+Math.random()*3}s`;
+  p.style.animationDelay = `${Math.random()*6}s, ${Math.random()*2}s`;
   document.body.appendChild(p);
 }
 
-/* ===== CONFIGURA EL TRAMO =====
-   Si tu mp3 ya está recortado, deja START=0 y END='auto'. */
-const FRAG_START = 0;
-const FRAG_END   = 'auto';
+/* ===== Configuración (MP3 ya recortado) ===== */
+const FRAG_START = 0;       // inicio del verso
+const FRAG_END   = 'auto';  // fin automático (fin del mp3)
 
-/* ===== Marcas por línea (relativas a FRAG_START). Ajusta si hace falta ===== */
+/* Letras y tiempos (relativos a FRAG_START) */
 const SEG = [
   { text: "Secrets I have held in my heart",           t0: 0.00, t1: 2.60 },
   { text: "Are harder to hide than I thought",         t0: 3.00, t1: 5.80 },
@@ -91,22 +117,19 @@ const SEG = [
 ];
 
 const audio = document.getElementById('bgm');
-const toast = document.getElementById('toast');
+const gate  = document.getElementById('gate');
+const btn   = document.getElementById('playBtn');
 const box   = document.getElementById('lyricsBox');
 
-let rafId=null, finished=false, useAudioClock=false, startEpoch=0, fragEndAbs=0;
+let rafId=null, finished=false, fragEndAbs=0;
 
-/* Utilidades */
-function nowRel(){
-  if (useAudioClock && !audio.paused && isFinite(audio.currentTime)) return audio.currentTime - FRAG_START;
-  return (performance.now() - startEpoch)/1000;
-}
 function segIndexAt(tRel){ for(let i=SEG.length-1;i>=0;i--) if(tRel>=SEG[i].t0) return i; return 0; }
 
 function render(){
   if (finished) return cancelAnimationFrame(rafId);
 
-  const tRel = Math.max(0, nowRel());
+  const tRel = Math.max(0, (audio.currentTime || 0) - FRAG_START);
+
   if (tRel >= (fragEndAbs - FRAG_START) - 0.01){
     box.textContent = SEG.at(-1).text;
     box.classList.remove('caret');
@@ -125,61 +148,33 @@ function render(){
   rafId = requestAnimationFrame(render);
 }
 
-/* ===== Arranque: autoplay (mute) + desmute con gesto ===== */
-async function boot(){
-  startEpoch = performance.now();
-
-  // Esperar metadata para conocer duración
+/* Inicio tras toque/clic (compatibilidad móvil/WhatsApp) */
+async function start(){
+  // Espera metadata para tener la duración
   await new Promise(res=>{
     if (isFinite(audio.duration) && audio.duration>0) return res();
     const on=()=>{ audio.removeEventListener('loadedmetadata', on); res(); };
     audio.addEventListener('loadedmetadata', on);
-    setTimeout(res, 1200);
+    setTimeout(res, 1500);
   });
 
   const total = (isFinite(audio.duration) && audio.duration>0) ? audio.duration : 20;
   fragEndAbs = (FRAG_END==='auto') ? total : Math.min(total, FRAG_END);
 
-  // Buscar el inicio del fragmento y tratar de reproducir en mute
-  try{
-    audio.currentTime = FRAG_START;
-  }catch(e){}
+  try{ audio.currentTime = FRAG_START; }catch(_){}
+  await audio.play();            // necesario en móviles/WhatsApp
 
-  // Autoplay permitido si está muted
-  try{
-    await audio.play();
-    useAudioClock = true;        // usamos reloj del audio
-    toast.classList.add('hidden');
-  }catch{
-    // Si ni en mute arranca, el archivo no cargó. Pero normalmente sí arranca silenciado.
-  }
-
-  // En cuanto el usuario haga gesto → desmutear, subir volumen y asegurar play
-  async function enableSound(){
-    audio.muted = false;
-    audio.volume = Math.max(audio.volume, 1.0);
-    try{
-      if (audio.paused) await audio.play();
-      useAudioClock = true;
-      toast.classList.add('hidden');
-    }catch{}
-  }
-  document.addEventListener('click', enableSound);
-  document.addEventListener('keydown', enableSound);
-  document.addEventListener('pointerdown', enableSound);
-  document.addEventListener('touchstart', enableSound);
-  audio.addEventListener('playing', ()=>{ useAudioClock = true; toast.classList.add('hidden'); });
-
-  // Mostrar aviso si sigue muted
-  setTimeout(()=>{ if (audio.muted || audio.volume === 0) toast.classList.remove('hidden'); }, 400);
-
-  // Iniciar render del tipeo
+  gate.classList.add('hidden');  // ocultar overlay
   box.textContent = "";
   box.classList.add('caret');
+
+  cancelAnimationFrame(rafId);
   rafId = requestAnimationFrame(render);
 }
 
-window.addEventListener('load', boot);
+btn.addEventListener('click', start);
+gate.addEventListener('click', e => { if (e.target === gate) start(); });
 </script>
 </body>
 </html>
+
